update fix scrollbar overflow

--- a/UI/renderer/components/AppSideBar.module.css
+++ b/UI/renderer/components/AppSideBar.module.css
@@ -47,7 +47,7 @@
 }
 
 .sideMenu ul {
-  padding-top: 17.8vh;
+  padding-top: 6.25rem;
   padding-left: 0%;
   list-style-type: none;
   flex-grow: 1;
@@ -63,6 +63,11 @@
   padding: 8px;
   padding-left: 8%;
   align-items: center;
+}
+.sideMenu li.home{
+  /* margin-top: 2.5rem; */
+  /* padding-top: 0; */
+  margin-top: 0rem;
 }
 
 .sideMenu .link {
@@ -95,7 +100,9 @@
   /* transform: ease-in 300ms;
   translate: ease-in 300ms; */
 }
-
+.sideMenu li.plan{
+  margin-bottom: 2.5rem;
+}
 .sideMenu li.plan:hover {
   padding: 8px;
   border-radius: 12px;
